Modified vtk pipelines to use a collection of vtkProp objects, so a visualization can have any number of scene objects, such as axes or other widgets.  Required a little refactoring.

--- a/wxGui/CMakeLists.txt
+++ b/wxGui/CMakeLists.txt
@@ -20,7 +20,7 @@ SET (Gui_SRCS
     ImageTracker.cpp                            ImageTracker.h
     ImageTrackerController.cxx                  ImageTrackerController.h
 #    ImageViewer.cxx                             ImageViewer.h
-                                                ItkVtkPipeline.h
+    ItkVtkPipeline.cxx                          ItkVtkPipeline.h
     wxIntSlider.cxx                             wxIntSlider.h
     LoggerPanel.cxx                             LoggerPanel.h
     MultiResolutionRegistrationDialog.cpp	    MultiResolutionRegistrationDialog.h
