Added rudimentary vector glyph visualization. Added a visualization control panel to ImageTracker--the contents of the control panel updates based on which data source is selected. The default is an empty panel with a nice message. Changed the name of the vector glyph pipeline to something more reasonable.

--- a/wxGui/CMakeLists.txt
+++ b/wxGui/CMakeLists.txt
@@ -12,6 +12,7 @@ SET (Gui_SRCS
     DataSourceDialog.cpp                        DataSourceDialog.h
     DoubleSlider.cxx                            DoubleSlider.h
     wxDoubleSlider.cxx                          wxDoubleSlider.h
+    EmptyVisualizationControl.cpp               EmptyVisualizationControl.h
     FileSetDialog.cxx                           FileSetDialog.h
     GlobalRegistrationDialog.cxx                GlobalRegistrationDialog.h
     GuiUtils.cxx                                GuiUtils.h
@@ -28,7 +29,8 @@ SET (Gui_SRCS
     RegistrationDesign_wdr.cpp                  RegistrationDesign_wdr.h
     RemoveOcclusionsDialog.cpp                  RemoveOcclusionsDialog.h
     ScalarImageItkVtkPipeline.cxx               ScalarImageItkVtkPipeline.h
-    Vector2DGlyphItkVtkPipeline.cxx             Vector2DGlyphItkVtkPipeline.h
+    VectorGlyphPipeline.cxx                     VectorGlyphPipeline.h
+    VectorGlyphControlPanel.cpp                 VectorGlyphControlPanel.h
     WxPipelineObserver.cxx                      WxPipelineObserver.h
     wxCore_wdr.cpp                              wxCore_wdr.h
     wxGui.rc
