Added utility methods to extract parts of formatted file names. Added Russell's file_list utility from video (in preference to requiring video is checked out when ImageTracker builds).

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -5,8 +5,10 @@ PROJECT (common)
 #######################################
 SET (common_SRCS
                     CommonTypes.h
+    file_list.cpp   file_list.h
                     FilePattern.h
     FileSet.cxx     FileSet.h
+    FileUtils.cxx   FileUtils.h
     Logger.cxx      Logger.h
                     MathUtils.h
     Mutex.cxx       Mutex.h
