Added NaryJoinImageFilter, which creates a N-component vector image out of N scalar images. Added StuctureTensorImageFilter, which computes the structure tensor for a pair of images.  The structure tensor is based on the cross-product of the spatiotemporal gradient.  There are two scale factors--the differentiation scale and the integration/aperture scale.

--- a/filters/CMakeLists.txt
+++ b/filters/CMakeLists.txt
@@ -51,6 +51,7 @@ SET (Filters_SRCS
                             ModulateRegionImageFilter.h
                             MultiResolutionOpticalFlowMethod.h
                             MultiResolutionRegistration.h
+                            NaryJoinImageFilter.h
                             NaryMeanImageFilter.h
                             NaryMeanVectorImageFilter.h
                             NaryMedianImageFilter.h
@@ -64,6 +65,7 @@ SET (Filters_SRCS
                             itkRealToComplexImageFilter.h
                             RegistrationMotionFilter.h
                             RungeKuttaSolver.h
+                            StructureTensorImageFilter.h
                             WarpImageErrorFilter.h
 )
 
