Parallelized CLG implementation.  Added a threaded iterative step filter to handle each optical flow iteration. Restructured optical flow filter to use support classes for structure computation and flow iteration.

--- a/filters/CMakeLists.txt
+++ b/filters/CMakeLists.txt
@@ -37,6 +37,7 @@ SET (Filters_SRCS
                             AddConstantImageFilter.h
                             BilateralVectorImageFilter.h
                             CentralDifferenceImageFilter.h
+                            CLGOpticalFlowIterativeStepImageFilter.h
                             CLGOpticFlowImageFilter.h
                             DerivativesToSurfaceImageFilter.h
                             itkFFTComplexToComplexImageFilter.h
