Changes for new nano namespace for nanoCommon classes.

--- a/wxGui/CMakeLists.txt
+++ b/wxGui/CMakeLists.txt
@@ -1,16 +1,11 @@
 PROJECT (gui)
 
-###################################
-# wxWindows GUI
-###################################
-INCLUDE (../LocalUsewxWidgets.cmake)
-
 SET (Gui_SRCS
     AboutDialog.cpp                             AboutDialog.h
     ApplyTransformDialog.cpp                    ApplyTransformDialog.h
     CLGOpticFlowDialog.cpp                      CLGOpticFlowDialog.h
+						ConnectVTKITK.h
     DataSourceDialog.cpp                        DataSourceDialog.h
-    wxDoubleSlider.cpp                          wxDoubleSlider.h
     EmptyVisualizationControl.cpp               EmptyVisualizationControl.h
     FilePatternDialog.cpp                       FilePatternDialog.h
     FilePatternPanel.cpp                        FilePatternPanel.h
@@ -19,10 +14,9 @@ SET (Gui_SRCS
     ImageTracker.cpp                            ImageTracker.h
     ImageTrackerController.cxx                  ImageTrackerController.h
     ItkVtkPipeline.cxx                          ItkVtkPipeline.h
-    wxIntSlider.cpp                             wxIntSlider.h
     IntegrateFlowDialog.cpp                     IntegrateFlowDialog.h
     LookupTableUtil.cxx                         LookupTableUtil.h
-    MultiResolutionRegistrationDialog.cpp	    MultiResolutionRegistrationDialog.h
+    MultiResolutionRegistrationDialog.cpp	MultiResolutionRegistrationDialog.h
     PipelineExecutor.cxx                        PipelineExecutor.h
     RemoveOcclusionsDialog.cpp                  RemoveOcclusionsDialog.h
     SaveVisualizationDialog.cpp                 SaveVisualizationDialog.h
@@ -37,4 +31,4 @@ SET (Gui_SRCS
 
 # A library, so others can use the GUI tools
 ADD_LIBRARY(ITGui ${Gui_SRCS})
-TARGET_LINK_LIBRARIES(ITGui ITCommon ITPipelines ITView )
+TARGET_LINK_LIBRARIES(ITGui ITCommon ITPipelines nanoWx nanoVTKView)
