Modified CLG optical flow to use a Gauss-Seidel solver, which seems to behave well with a multiscale optical flow implementation.

--- a/filters/CMakeLists.txt
+++ b/filters/CMakeLists.txt
@@ -42,6 +42,7 @@ SET (Filters_SRCS
                             DerivativesToSurfaceImageFilter.h
                             itkFFTComplexToComplexImageFilter.h
                             itkFFTWComplexToComplexImageFilter.h
+                            GaussSeidelIterativeStepImageFilter.h
                             Gaussian2DVectorFilter.h
                             GaussianFunctionImageFilter.h
                             GaussianGradientImageFilter.h
