Added generic image and vector file sets and reader implementations.  These are replacing the more difficult to use DataSources.

--- a/image/CMakeLists.txt
+++ b/image/CMakeLists.txt
@@ -8,9 +8,14 @@ PROJECT (image)
 SET (image_SRCS
     DataSource.cxx                  DataSource.h
     FileSetImageReader.cxx          FileSetImageReader.h
+                                    ImageFileSet.h
+    ImageFileSetReader.cxx          ImageFileSetReader.h
+                                    ImageFileSetTypes.h
                                     ImageSetReader.h
     ImageUtils.cxx                  ImageUtils.h
     TransformGroup.cxx              TransformGroup.h
+                                    VectorFileSet.h
+    VectorFileSetReader.cxx         VectorFileSetReader.h
 )
 
 ADD_LIBRARY (ITImage ${image_SRCS})
